// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormErrorMessage > Snapshot > 1`] = `
<p
  aria-live="polite"
  class="Text typo-13 align-left margin FormHelperText"
  data-testid="bezier-form-error-message"
  id="test"
  style="--b-text-color: var(--alpha-bg-orange-normal);"
>
  Lorem ipsum
</p>
`;

exports[`FormHelperText > Snapshot > 1`] = `
<p
  class="Text typo-13 align-left margin FormHelperText"
  data-testid="bezier-form-helper-text"
  id="test"
  style="--b-text-color: var(--alpha-fg-black-dark);"
>
  Lorem ipsum
</p>
`;
